Create parent POM for all my plugins
Also update Travis config to use Java 11
Also fix gitignore