@@ -14,6 +14,7 @@
     <name>ButtonCore Parent</name>
 
     <modules>
+        <module>CorePOM</module>
         <module>ButtonCore</module>
         <module>ButtonProcessor</module>
         <module>BuildConfigUpdater</module>
@@ -28,28 +29,6 @@
                     <version>3.8.1</version>
                     <configuration>
                         <release>8</release>
-                        <annotationProcessorPaths>
-                            <annotationProcessorPath>
-                                <groupId>com.github.bsideup.jabel</groupId>
-                                <artifactId>jabel-javac-plugin</artifactId>
-                                <version>0.2.0</version>
-                            </annotationProcessorPath>
-                            <annotationProcessorPath>
-                                <groupId>org.projectlombok</groupId>
-                                <artifactId>lombok</artifactId>
-                                <version>${lombok.version}</version>
-                            </annotationProcessorPath>
-                            <annotationProcessorPath>
-                                <groupId>com.github.TBMCPlugins.ButtonCore</groupId>
-                                <artifactId>ButtonProcessor</artifactId>
-                                <version>master-SNAPSHOT</version>
-                            </annotationProcessorPath>
-                        </annotationProcessorPaths>
-                        <annotationProcessors> <!-- Order is important, so these lines are needed -->
-                            <annotationProcessor>com.github.bsideup.jabel.JabelJavacProcessor</annotationProcessor>
-                            <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
-                            <annotationProcessor>buttondevteam.buttonproc.ButtonProcessor</annotationProcessor>
-                        </annotationProcessors>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -77,29 +56,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>intellij-idea-only</id>
-            <activation>
-                <property>
-                    <name>idea.maven.embedder.version</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <release>13</release>
-                            <compilerArgs>
-                                <arg>--enable-preview</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
